# coreason-aegis

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  VIGNETTE.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md  requirements.md  usage.md
src/coreason_aegis/: __init__.py  exceptions.py  main.py  masking.py  models.py  reidentifier.py  scanner.py  server.py  vault.py
src/coreason_aegis/utils/: __init__.py  logger.py
src/coreason_jules_automator/: config.py
tests/: conftest.py  test_cli_and_errors.py  test_config.py  test_custom_recognizers.py  test_docker_parity_complex.py  test_identity_bound_vault.py  test_location_edge_cases.py  test_main.py  test_masking.py  test_masking_complex.py  test_masking_edge_cases.py  test_masking_hash.py  test_masking_normalization.py  test_masking_suffix.py  test_masking_synthetic_custom.py  test_missing_context.py  test_models.py  test_reidentifier.py  test_scanner.py  test_scanner_edge_cases.py  test_scanner_integration.py  test_scanner_refactor_edge_cases.py  test_secret_key_edge_cases.py  test_server.py  test_story_a.py  test_story_a_edge_cases.py  test_story_b.py  test_utils.py  test_vault.py
