[tool.poetry]
name = "coreason_aegis"
version = "0.3.0"
description = "bidirectional privacy filter that sits between the CoReason platform and the external world"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_aegis", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
loguru = "^0.7.2"
presidio-analyzer = "^2.2.360"
presidio-anonymizer = "^2.2.360"
pydantic = "^2.12.5"
faker = "^40.1.0"
cachetools = "^6.2.4"
coreason-identity = "^0.1.0"
anyio = "^4.4.0"
httpx = "^0.28.1"
aiofiles = "^25.1.0"
types-aiofiles = "^25.1.0.20251011"
jaraco-context = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
pydantic-settings = "^2.12.0"
mypy = "^1.19.1"
types-cachetools = "^6.2.0.20251022"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_aegis"
version = "0.3.0"
description = "bidirectional privacy filter that sits between the CoReason platform and the external world"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_aegis"
Repository = "https://github.com/CoReason-AI/coreason_aegis"
Documentation = "https://github.com/CoReason-AI/coreason_aegis"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
markers = [
    "integration: mark a test as an integration test",
    "asyncio: mark a test as an asyncio test",
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
